--- a/TEST/Web.config
+++ b/TEST/Web.config
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <!--<add name="DefaultConnection" connectionString="Data Source=ERICKVARGAS\SQLSERVER2012; Initial Catalog=app; user id=sa; password=Neoris01;" providerName="System.Data.SqlClient" />-->
-    <add name="DefaultConnection" connectionString="Server=tcp:mxcul01.database.windows.net,1433;Initial Catalog=SQLSERVER;Persist Security Info=False;User ID=user;Password=MgN9exfA;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=ERICKVARGAS\SQLSERVER2012; Initial Catalog=app; user id=sa; password=Neoris01;" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Server=tcp:mxcul01.database.windows.net,1433;Initial Catalog=SQLSERVER;Persist Security Info=False;User ID=user;Password=MgN9exfA;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
